<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="sample.arf.clean_architecture_with_mvvm.framework.db.UserEntitiy" />

        <variable
            name="ClickHandler"
            type="sample.arf.clean_architecture_with_mvvm.presentation.ui.Activity2.ClickHandler" />


    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Activity2_scrollView"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            tools:context=".presentation.ui.Activity2">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="48dp"
                android:text="Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />






            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="Email"
                app:layout_constraintStart_toStartOf="@+id/cardview"
                app:layout_constraintTop_toBottomOf="@+id/cardview" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="49dp"
                android:layout_height="19dp"
                android:layout_marginTop="48dp"
                android:text="Country"
                app:layout_constraintStart_toStartOf="@+id/cardview1"
                app:layout_constraintTop_toBottomOf="@+id/cardview1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView">


                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@={user.name}"
                    android:inputType="textPersonName"
                    />

            </androidx.cardview.widget.CardView>





            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@={user.email}"
                    android:inputType="textPersonName"
                    />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/edt_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@={user.country}"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />





            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="120dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@+id/cardview2"
                app:layout_constraintTop_toBottomOf="@+id/cardview2">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{ClickHandler::OnClick_submit}"
                    android:text="Submit"
                    android:textColor="#fff"
                    android:background="@color/colorPrimary"
                    />


            </androidx.cardview.widget.CardView>





        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</layout>
