<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    
    <data>
        
        <variable
            name="clickHandler"
            type="sample.arf.clean_architecture_with_mvvm.presentation.ui.MainActivity.ClickHandler" />
        
        
        <variable
            name="adapterSpinner"
            type="android.widget.ArrayAdapter" />
        
        
        
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <include
            android:id="@+id/layout_content_main"
            layout="@layout/contents_main"
            bind:adapterSpinner="@{adapterSpinner}"
            bind:onClickSpinner="@{clickHandler}"/>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />




    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="30dp"
        android:clickable="true"
        app:borderWidth="0dp"
        app:fabSize="normal"
        android:onClick="@{clickHandler::OnClick_floatAction}"
        android:src="@drawable/ic_baseline_add_24"
        android:focusable="true" />





</FrameLayout>


</layout>