<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="adapterSpinner"
            type="android.widget.ArrayAdapter" />

        <variable
            name="onClickSpinner"
            type="sample.arf.clean_architecture_with_mvvm.presentation.ui.MainActivity.ClickHandler" />



    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_margin="40dp"
            app:adapter="@{adapterSpinner}"
            android:onItemSelected="@{onClickSpinner::onItemClick}"/>




    </LinearLayout>




</layout>